--- a/dialogform/static/dialogform/demo/css/style.css
+++ b/dialogform/static/dialogform/demo/css/style.css
@@ -17,15 +17,10 @@
 }
 html {
     font-family: Arial, Helvetica, sans-serif;
-}
-body {
-    padding: 20px;
-    background: var(--_dialog-background);
+    background: var(--_dialog-background); /* from dialogform */
     color:      var(--_dialog-color);
 }
-body.popup {                    /* iframe dialogs have <html><body>...*/
-    padding: 0;                 /* not needed in dialog view */
-}
+
 div.noteandtags {
     font-size: 1rem;
 }
