Demo app improvements

--- a/dialogform/static/dialogform/css/style.css
+++ b/dialogform/static/dialogform/css/style.css
@@ -48,6 +48,8 @@
 .dialog-anchor img {
     height: var(--_icon-size);
     width:  var(--_icon-size);
+    min-height: var(--_icon-size);
+    min-width:  var(--_icon-size);
 }
 
 .dialog-anchor .hide {
