--- a/dialogform/templates/dialogform/demo/admin_note_change.html
+++ b/dialogform/templates/dialogform/demo/admin_note_change.html
@@ -1,6 +1,6 @@
 {# -*- mode:web -*- engine:django -*- #}
 {% extends "admin/change_form.html" %}
-
+<meta itemprop="this is admin_note_change.html">
 {# Eliminate non-form page elements #}
 {% block header %}{% endblock %}
 {% block nav-breadcrumbs %}{% endblock %}
