--- a/dialogform/static/dialogform/css/style.css
+++ b/dialogform/static/dialogform/css/style.css
@@ -75,6 +75,8 @@
     border-radius: var(--_border-radius);
     display: flex;
     flex-direction: column;
+    width: fit-content;
+    height: fit-content;
 }
 
 dialog.dialogform-dialog, dialog.dialogform-iframe {
@@ -93,7 +95,12 @@ dialog.dialogform-iframe > iframe {
 div.dialogform-content > * {
     margin: 0;                  /* do not interfere with dialogform-dialog padding calc. */
 }
-
+form.dialogform {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+}
 div.dialogform-buttons > button {
     margin: 8px;
     background: var(--_dialog-background); /* from dialogform */
