--- a/dialogform/templates/dialogform/demo/note_list.html
+++ b/dialogform/templates/dialogform/demo/note_list.html
@@ -28,7 +28,7 @@ Includes media required to instantiate dialog 'anchors' and basic demo app styli
       to see dialog-anchor demos within the admin environment and to add/remove Notes or Tags.
       Login as <b>admin</b>/<b>admin</b>  New notes can also be added using the admin "+" related widget wrapper within the dialogs.
     </p>
-    <p> The form for the third and fourth columns below uses admin widgets - for these to work completely you should have logged into admin previously and returned here ("view site" in admin header).</p>
+    <p> The form for the third and fourth columns below uses admin widgets - but note: for these to work properly you should log into admin first. The dialogs of the third column have to load all the admin core stylesheets and javascript so they affect the referring page display while the dialogs are open. Fourth column dialogs load into an iframe so the referring page is not affected.</p>
     <br><br>
     <table class="note-list" style="position:relative;">
       <tr>
