--- a/dialogform/static/dialogform/css/style.css
+++ b/dialogform/static/dialogform/css/style.css
@@ -29,15 +29,15 @@
  * inline anchors)
  */
 
-.dialog-anchor {
+div.dialog-anchor {
     display:    inline-block;
     box-sizing: border-box;
 }
 
-.dialog-anchor span {
+div.dialog-anchor span {
     text-decoration: none;
 }
-.dialog-anchor span:hover {
+div.dialog-anchor span:hover {
     text-decoration: underline;
     text-underline-position: under;
     text-underline-offset: 0.1em;
@@ -45,17 +45,17 @@
     background: var(--_dialog-anchor-bg-hover);
 }
 
-.dialog-anchor img {
+div.dialog-anchor img {
     height: var(--_icon-size);
     width:  var(--_icon-size);
     min-height: var(--_icon-size);
     min-width:  var(--_icon-size);
 }
 
-.dialog-anchor .hide {
+div.dialog-anchor .hide {
     opacity: 0;
 }
-.dialog-anchor .hide:hover {
+div.dialog-anchor .hide:hover {
     opacity: 1;
 }
 
