--- a/dialogform/templates/dialogform/demo/note_form.html
+++ b/dialogform/templates/dialogform/demo/note_form.html
@@ -20,7 +20,7 @@ Extends 'dialog-content' blocks of the base template (dialog.html or page.html)
     <link rel="stylesheet" href="{% static 'admin/css/dark_mode.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/widgets.css' %}">
-    <script src="{% static 'admin/js/theme.js' %}"></script>
+    {# <script src="{% static 'admin/js/theme.js' %}"></script> #}
   {% endif %}
   {{ block.super }}
 {% endblock %}
