--- a/dialogform/templates/dialogform/demo/note_list.html
+++ b/dialogform/templates/dialogform/demo/note_list.html
@@ -13,7 +13,7 @@ Includes media required to instantiate dialog 'anchors' and basic demo app styli
   <head>
     <meta http-equiv="Content-Style-Type" content="text/css"/>
     <title>DialogDemo</title>
-    {% include "dialogform/include/anchor_media.html" %}
+    {% include "dialogform/anchor_media.html" %}
     <link rel="stylesheet" type="text/css" href="{% static 'dialogform/demo/css/style.css' %}">
   </head>
 
@@ -21,14 +21,16 @@ Includes media required to instantiate dialog 'anchors' and basic demo app styli
     
     <h2>Dialog Form Demo Page</h2>
     
-    <p class="notes-links">{{ note_list.count }} Note{{ note_list.count|pluralize }}:</p>
-    <p>Here is a <em>local</em> <span class="dialog-anchor" data-url="#local_note_dialog"><span>Search dialog</span></span> example.</p>
-    <p>Each column of the table below shows a different editing dialog type for the rows of notes. The form for the third and fourth columns below uses admin widgets - but note: for these to work properly you should log into admin first (see below). The dialogs of the third column have to load all the admin core stylesheets and javascript so they affect the referring page display while the dialogs are open. Fourth column dialogs load into an iframe so the referring page is not affected.</p>
+    <p>Each column of the table below shows a different editing dialog type for the rows of notes.</p>
+    <p>The form for the third and fourth columns below uses admin widgets - but note: for these to work properly you should log into admin first (see below).</p>
+    <p>The dialogs of the third column have to load all the admin core stylesheets and javascript so they affect the referring page display while the dialogs are open. Fourth column dialogs load into an iframe so the referring page is not affected.</p>
     <p><a href="{% url 'admin:demo_note_changelist' %}">Go to Notes in Admin</a>
       to see dialog-anchor demos within the admin environment and to add/remove Notes or Tags.
       Login as <b>admin</b>/<b>admin</b></p>
     <p>New notes can also be added using the admin "+" related widget wrapper within the dialogs.</p>
-    <br><br>
+    <p>Here is a <span class="dialog-anchor" data-url="#local_note_dialog"><span>Search</span></span> (local dialog) example.</p>
+
+    <p class="notes-links">{{ note_list.count }} Note{{ note_list.count|pluralize }}:</p>
     <table class="note-list" style="position:relative;">
       <tr>
         <th scope="col">Note and <br>Tag Select Dialogs</th>
