--- a/dialogform/templates/dialogform/page.html
+++ b/dialogform/templates/dialogform/page.html
@@ -16,13 +16,13 @@ the dialog form itself.
     <meta http-equiv="Content-Style-Type" content="text/css"/>
     {% block dialog-media %}
     {{ form.media }}
-    {% include "dialogform/include/anchor_media.html" %}{# in case form refers to dialog-anchors #}
+    {% include "dialogform/anchor_media.html" %}{# in case form refers to dialog-anchors #}
     {% endblock %}
   </head>
   <body style="margin:0">
     <div class="dialogform-dialog">
       {% block dialog-content %}
-        {% include "dialogform/include/form_table.html" %}
+        {% include "dialogform/form.html" %}
       {% endblock %}
     </div>
   </body>
